--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.3",
+    "react-simple-snackbar": "^1.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
