--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.3",
-    "react-simple-snackbar": "^1.1.10"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
