--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://risgpta.github.io/twitter",
+  "homepage": "https://mukul-py-cmd.github.io/twitter",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
