--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "http://localhost:3000/#/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
