--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "homepage": ".",
   "version": "0.1.0",
+  "start": "node server/server.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
