--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-simple-snackbar": "^1.1.10"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
