--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-simple-snackbar": "^1.1.10"
+    "react-simple-snackbar": "^1.1.10",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
