--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "http://risgpta.github.io/twitter",
+  "homepage": "https://risgpta.github.io/twitter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
